# DK_Python_IMS

./: .env.example  .gitignore  crash_debug_log.txt  pyproject.toml  rule.md  test_api.py  test_kiemtra.py  test_kiemtra_output.json
apps/data_crawler/: main.py  pyproject.toml
apps/web_api/: log_broker.py  main.py  pyproject.toml
apps/web_api/routers/: __init__.py
apps/web_api/routers/kiem_tra_in/: __init__.py  block_analyzer.py  block_splitter.py  image_processor.py  llm_client.py  ocr_engine.py  orientation_detector.py  prompt.txt  router.py  schemas.py  text_comparator.py  zone_splitter.py
apps/web_api/templates/: dashboard.html
apps/yolo_trainer/: README.md  data.yaml  debug_full_test.py  debug_full_test.txt  debug_maket.py  debug_output.txt  debug_pipeline.py  debug_quick.py  predict.py  pyproject.toml  test_ocr_crash.py  train.py
apps/yolo_trainer/datasets/: README.roboflow.txt  README_datasets.txt  data.yaml  data_v2.yaml
apps/yolo_trainer/datasets/cardboard/: README.roboflow.txt  data.yaml
apps/yolo_trainer/datasets/cardboard/train/: labels.cache
apps/yolo_trainer/datasets/test/labels/: A104_jpg.rf.39af4cf0da5bc15d944a038220526b50.txt  A13_jpg.rf.9077665265e989d21274238716e8b17d.txt  A28_jpg.rf.e52511ee0a6c4a1162e76756f3a3a684.txt  A39_jpg.rf.18a666d14de628ae961482af84758016.txt  A45_jpg.rf.03b813296a17c0d0d06014d449fe64a2.txt  A47_jpg.rf.cdd08efc9baaf83dcc2f0763eca73f7f.txt  A61_jpg.rf.6465d3f1b72f920be23c1b37bb291762.txt  A83_jpg.rf.e37e6ffcabbbdc21bcba2de71d8cb289.txt  (+5 more)
apps/yolo_trainer/datasets/train/: labels.cache
apps/yolo_trainer/datasets/valid/: labels.cache
shared/: pyproject.toml
(+453 files in other folders)
