[project]
name = "data-crawler"
version = "0.1.0"
description = "Data crawler / scraper application"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
