[project]
name = "web-api"
version = "0.2.0"
description = "FastAPI web application — DK Python IMS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "shared",
    "opencv-python>=4.9.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "scikit-image>=0.22.0",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
