[project]
name = "yolo-trainer"
version = "0.1.0"
description = "YOLOv8 Segmentation trainer để detect và crop vùng in carton"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yolo_trainer"]
